fix alignment issue on bigger screens

--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ li {
 
 /* HERO SECTION */
 .hero {
-    align-items: flex-start;  
+    align-items: center;  
     background-image: url('images/hero-background.webp');
     background-position: right;
     background-size: 800px;
